# alarmdecoder-modernized

./: .gitignore  Dockerfile  README.md  README.rst  mypi.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.eggs/setuptools_scm-8.2.0-py3.11.egg/EGG-INFO/: requires.txt
.eggs/setuptools_scm-8.2.0-py3.11.egg/setuptools_scm/: _cli.py
.github/actions/build-and-test/: action.yaml
alarmdecoder/: __init__.py  decoder.py  logger.py  panels.py  states.py  util.py  zonetracking.py
alarmdecoder/devices/: __init__.py  base_device.py  mock_device.py  serial_device.py  socket_device.py  usb_device.py
alarmdecoder/event/: __init__.py  event.py  wiring.py
alarmdecoder/handlers/: config_io.py  sending.py  versioning.py
alarmdecoder/messages/: __init__.py  aui_message.py  base_message.py  expander_message.py  panel_message.py  parser.py  rf_message.py
alarmdecoder/messages/lrr/: __init__.py  events.py  message.py  system.py
alarmdecoder/status/: updater.py
alarmdecoder/util/: __init__.py  exceptions.py  firmware.py  io.py
docs/: conf.py
docs/cli-tools/: ad2-firmwareupload.md  ad2-sslterm.md
examples/: alarm_email.py  lrr_example.py  rf_device.py  serialport.py  socket_example.py  ssl_socket.py  usb_detection.py  usb_device.py  virtual_zone_expander.py
test/: test_ad2.py  test_devices.py  test_messages.py  test_zonetracking.py
test/cli/: test_firmwareupload.py
test/handlers/: test_versioning.py
test/messages/: test_parser.py
test/status/: test_updater.py
