[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alarmdecoder"
version = "1.0.0"
description = "Modernized Python interface for the AlarmDecoder (AD2) family of alarm devices"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nu Tech Software Solutions, Inc.", email = "general@support.nutech.com"},
]
keywords = ["alarmdecoder", "ad2usb", "security", "home automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Security"
]

dependencies = [
    "pyserial>=3.5"
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "flake8"]

[project.scripts]
ad2-firmwareupload = "alarmdecoder.util.ad2_firmwareupload:main"

[tool.pytest.ini_options]
# Add other options like markers, testpaths etc. if you have them
pythonpath = [
  "." # Add the project root directory to the Python path
  # Add "src" here instead if your alarmdecoder package was inside a 'src' folder
]

[flake8]
# Increase default max line length
max-line-length = 200
# Ignore certain errors (e.g., E203 whitespace before ':')
# Find error codes in Flake8 documentation
ignore = ["E203", "W503"]
# Exclude certain directories
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
    "venv",
    ".venv"
]
